tests/ui/structs/struct-default-field-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/struct-default-field-wrong-type.rs:2:16
   |
LL |     foo: u32 = false,
   |                ^^^^^ expected `u32`, found `bool`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
